--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Dnxl4QGueL51uzcNu8Ui/swlsB8ztCUGTbE181N0oss=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=capstone
+DB_USERNAME=root
+DB_PASSWORD=1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
