--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:Dnxl4QGueL51uzcNu8Ui/swlsB8ztCUGTbE181N0oss=
+APP_KEY=base64:gT1H5urM+Z4Xs+v/dPczRUNnwzRaYDuH/BdQoSLnsfo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=capstone
+DB_DATABASE=testtest
 DB_USERNAME=root
-DB_PASSWORD=1234
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
