--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.7",
         "maddhatter/laravel-fullcalendar": "^1.3",
-        "milon/barcode": "^5.3"
+        "milon/barcode": "^5.3",
+        "nexmo/client": "^1.6"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
