--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravelcollective/html": "^5.7",
         "maddhatter/laravel-fullcalendar": "^1.3",
         "milon/barcode": "^5.3",
-        "nexmo/client": "^1.6"
+        "nexmo/client": "^1.6",
+        "twbs/bootstrap": "^4.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
